--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,5 @@ edition = "2018"
 
 
 [dependencies]
-piston = "0.52.0"
-piston2d-graphics = "0.39.0"
-pistoncore-glutin_window = "0.67.0"
-piston2d-opengl_graphics = "0.76.0"
+piston_window = "0.93.0"
+rand = "0.6.5"
